added some designs to the welcome page and also created the footer for signup and login screens

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Link to external font (e.g., Poppins) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <title>ACADEMIC ISSUE TRACKING SYSTEM</title>
   </head>
   <body>
